syntax = "proto3";

package conn;

service ConnService {
    rpc Disconnect (DisconnectReq) returns (DisconnectResp) {}
    rpc Notify (NotifyReq) returns (NotifyResp) {}
}

message DisconnectReq {
    string ClientID = 1;
    int64 ConnectionID = 2;
    string TraceID = 3;
    string Service = 4;
}

message DisconnectResp {
}

message NotifyReq {
    string Topic = 1;
    bytes Index = 2;
    bool NoneDowngrade = 3;
    string TraceID = 4;
    string Service = 5;
}

message NotifyResp {
}
